# DiligentEngine

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakeSettings.json  CppProperties.json  README.md  ReleaseHistory.md  TestBuildScript.cmake  Troubleshooting.md  appveyor.yml  flake.nix
Common/NativeApp/: CMakeLists.txt
Common/NativeApp/Android/: .gitignore  CMakeLists.txt  android_common.gradle  build.gradle
Common/NativeApp/Linux/: CMakeLists.txt
Common/NativeApp/include/: AppBase.h  NativeAppBase.h  NativeAppData.h
DiligentCore/: .clang-format  .gitIgnore  .gitmodules  .travis.yml  BuildUtils.cmake  CMakeLists.txt  README.md  ReleaseHistory.md  appveyor.yml  ios.toolchain.cmake
DiligentCore/BuildTools/: CMakeLists.txt
DiligentCore/BuildTools/File2Include/: CMakeLists.txt  File2String.cpp
DiligentCore/BuildTools/FormatValidation/: clang-format-validate.py  clang-format_linux_10.0.0  clang-format_mac_10.0.0  validate_format_linux.sh  validate_format_linux_implementation.sh  validate_format_mac.sh  validate_format_win.bat
DiligentCore/Common/: CMakeLists.txt
DiligentCore/Common/include/: pch.h
DiligentCore/Common/interface/: AdvancedMath.hpp  Align.hpp  BasicFileStream.hpp  BasicMath.hpp  DataBlobImpl.hpp  DefaultRawMemoryAllocator.hpp  FastRand.hpp  FileWrapper.hpp  FilteringTools.hpp  FixedBlockMemoryAllocator.hpp  HashUtils.hpp  LinearAllocator.hpp  LockHelper.hpp  MemoryFileStream.hpp  ObjectBase.hpp  RefCntAutoPtr.hpp  RefCountedObjectImpl.hpp  STDAllocator.hpp  StringDataBlobImpl.hpp  StringPool.hpp  StringTools.hpp  ThreadSignal.hpp  Timer.hpp  UniqueIdentifier.hpp  ValidatedCast.hpp
DiligentCore/Common/src/: BasicFileStream.cpp  DataBlobImpl.cpp  DefaultRawMemoryAllocator.cpp  FixedBlockMemoryAllocator.cpp  LockHelper.cpp  MemoryFileStream.cpp  Timer.cpp  pch.cpp
DiligentCore/Graphics/: CMakeLists.txt
DiligentCore/Graphics/GraphicsAccessories/: CMakeLists.txt
DiligentCore/Graphics/GraphicsEngine/: CMakeLists.txt
DiligentCore/Graphics/GraphicsEngineD3D11/: CMakeLists.txt  readme.md
DiligentCore/Graphics/GraphicsEngineD3D12/: CMakeLists.txt  readme.md
DiligentCore/Graphics/GraphicsEngineD3DBase/: CMakeLists.txt
DiligentCore/Graphics/GraphicsEngineMetal/: readme.md
DiligentCore/Graphics/GraphicsEngineNextGenBase/: CMakeLists.txt
DiligentCore/Graphics/GraphicsEngineOpenGL/: CMakeLists.txt  readme.md
DiligentCore/Graphics/GraphicsEngineVulkan/: CMakeLists.txt  readme.md
DiligentCore/Graphics/GraphicsTools/: CMakeLists.txt
DiligentCore/Graphics/HLSL2GLSLConverterLib/: CMakeLists.txt  readme.md
DiligentCore/Graphics/ShaderTools/: CMakeLists.txt
DiligentCore/Primitives/: CMakeLists.txt
DiligentCore/Primitives/interface/: BasicTypes.h  CommonDefinitions.h  DataBlob.h  DebugOutput.h  DefineGlobalFuncHelperMacros.h  DefineInterfaceHelperMacros.h  Errors.hpp  FileStream.h  FlagEnum.h  FormatString.hpp  InterfaceID.h  MemoryAllocator.h  Object.h  ReferenceCounters.h  UndefGlobalFuncHelperMacros.h  UndefInterfaceHelperMacros.h
DiligentCore/Primitives/src/: DebugOutput.cpp  test.cpp
DiligentCore/Tests/: CMakeLists.txt
DiligentCore/Tests/DiligentCoreAPITest/: CMakeLists.txt
DiligentCore/Tests/DiligentCoreTest/: CMakeLists.txt
DiligentCore/Tests/IncludeTest/: CMakeLists.txt
DiligentCore/doc/: code_formatting.md
DiligentFX/: .travis.yml  CMakeLists.txt  README.md  appveyor.yml
DiligentFX/BuildTools/FormatValidation/: validate_format_linux.sh  validate_format_mac.sh  validate_format_win.bat
DiligentFX/Components/: CMakeLists.txt  README.md
DiligentFX/Components/interface/: ShadowMapManager.hpp
DiligentFX/GLTF_PBR_Renderer/: CMakeLists.txt  README.md
DiligentFX/PostProcess/: CMakeLists.txt
DiligentFX/Tests/: CMakeLists.txt
DiligentFX/Utilities/: CMakeLists.txt
DiligentFX/shaders_inc/: AtmosphereShadersCommon.fxh.h  BasicStructures.fxh.h  CoarseInsctr.fx.h  CombineScatteringOrders.fx.h  ComputeIrradianceMap.psh.h  ComputeMinMaxShadowMapLevel.fx.h  ComputeScatteringOrder.fx.h  ComputeSctrRadiance.fx.h  CubemapFace.vsh.h  EpipolarLightScatteringFunctions.fxh.h  EpipolarLightScatteringStructures.fxh.h  Extinction.fxh.h  FullScreenTriangleVS.fx.h  FullScreenTriangleVSOutput.fxh.h  GLTF_PBR_PrecomputeCommon.fxh.h  GLTF_PBR_Shading.fxh.h  GLTF_PBR_Structures.fxh.h  GLTF_PBR_VertexProcessing.fxh.h  InitHighOrderScattering.fx.h  InitializeMinMaxShadowMap.fx.h  InterpolateIrradiance.fx.h  LookUpTables.fxh.h  MarkRayMarchingSamples.fx.h  PBR_Common.fxh.h  PrecomputeAmbientSkyLight.fx.h  PrecomputeCommon.fxh.h  PrecomputeGLTF_BRDF.psh.h  PrecomputeNetDensityToAtmTop.fx.h  PrecomputeSingleScattering.fx.h  PrefilterEnvMap.psh.h  RayMarch.fx.h  ReconstructCameraSpaceZ.fx.h  RefineSampleLocations.fx.h  RenderCoordinateTexture.fx.h  RenderGLTF_PBR.psh.h  RenderGLTF_PBR.vsh.h  RenderSampling.fx.h  RenderSliceEndPoints.fx.h  ScatteringIntegrals.fxh.h  ShaderUtilities.fxh.h  (+11 more)
DiligentSamples/: .gitIgnore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  ReleaseHistory.md  appveyor.yml
DiligentSamples/Android/: .gitignore  build.gradle  settings.gradle
DiligentSamples/SampleBase/: CMakeLists.txt
DiligentSamples/Samples/: CMakeLists.txt
DiligentSamples/Tutorials/: CMakeLists.txt
DiligentTools/: .gitmodules  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
DiligentTools/AssetLoader/: CMakeLists.txt  README.md
DiligentTools/HLSL2GLSLConverter/: CMakeLists.txt
DiligentTools/Imgui/: CMakeLists.txt
DiligentTools/NativeApp/: CMakeLists.txt
DiligentTools/Tests/: CMakeLists.txt
DiligentTools/TextureLoader/: CMakeLists.txt
Projects/Asteroids/: .gitignore  CMakeLists.txt  DiligentD3D11.dds  DiligentD3D12.dds  DiligentGL.dds  README.md  asteroids.vcxproj  asteroids.vcxproj.filters
Projects/ImportGLTFViewer/: CMakeLists.txt
Projects/TownRunner/: CMakeLists.txt  DiligentVk.dds  README.md  directx11.dds  directx12.dds  license.txt
Tests/IncludeTest/: CMakeLists.txt
Tests/TestApp/: CMakeLists.txt
unityplugin/GhostCubeScene/: CMakeLists.txt
unityplugin/UnityEmulator/: CMakeLists.txt
(+2203 files in other folders)
